Fri Oct 31 02:51:59 CET 2003 (tk)
---------------------------------
  * clamd: initialize a session start-time in proper order (thanks to Michael
	   Dankov). The fix eliminates potential termination (because of
	   time out) of just started threads.
  * sigtool: fixes

Mon Oct 27 22:08:53 CET 2003 (tk)
---------------------------------
  * freshclam: fixed a segmentation fault (thanks to Graham Murray); only
	       use a one mirror for a full update; display IP addresses
  * clamd: use SO_REUSEADDR in tcpserver (Laurent Wacrenier)
  * configure: set $sysconfdir with respect to --prefix (thanks NERvOus)

Sun Oct 26 06:26:14 CET 2003 (tk)
---------------------------------
  * clamd: report file errors with CONTSCAN (suggested by Daniel Fraga)
  * libclamav: cvd and general cleanups
  * freshclam: rewritten to use cvd, cleanups; --debug added
  * mirrors.txt: only use database.clamav.net

Fri Oct 24 02:19:54 CEST 2003 (tk)
---------------------------------
  * clamd: initialize the virus-number variable (Igor Brezac)
  * sigtool: fixed compilation issue on Solaris (bug reported by
	     Christopher X. Candreva)

Wed Oct 22 20:44:29 BST 2003 (njh)
---------------------------------
  * clamav-milter: more calls to pthread_cond_broadcast

Mon Oct 20 01:57:16 CEST 2003
----------------------------------
  * sigtool: receive digital signature from remote ClamAV Signing Service
  * libclamav: small cvd fixes

Fri Oct 17 05:08:22 CEST 2003 (tk)
----------------------------------
  * new Spanish documentation on ClamAV + Sendmail integration by
    Erick Ivaan Lopez Carreon
  * freshclam: share cfgfile.o with clamd. Makefile conditions allow building
	       without clamd (if pthread library is not available). The problem
	       with outdated cfgfile.c in freshclam was reported by Jim C.
  * clamd: fixed a segmentation fault with TCPAddr. Problem reported by
	   Stefan Kaltenbrunner and fixed by Damien Curtain.